--- a/templates/index.pug
+++ b/templates/index.pug
@@ -136,72 +136,65 @@ html(lang='pt-br')
         .saas_section_title.mb_70
           h2 O que FindCEP oferece ao seu negócio?
           p
-            | A API FindCEP é a mais ágil e completa solução de localizacação de codigo postal e endereços no 
+            | A API FindCEP é a mais ágil e completa solução 
             br
-            | BRASIL.
+            | de localizacação de codigo postal e endereços no BRASIL.
           h3 Base integrada com os Correios
           p  
-            | FindCEP Oferece Busca de CEPs (Código Enderecamento Postal) e Endereços para o seu negócio online.
-        .saas_video
-          img(src='', alt='')
-          a.video_btn(href='#')
-            i.fa.fa-play
+            | FindCEP oferece busca e tratamento de CEPs (Código Enderecamento Postal) e Endereços para o seu negócio online.
+        //.saas_video
+        //  img(src='', alt='')
+        //  a.video_btn(href='#')
+        //    i.fa.fa-play
     section.saas_dashboard_features
       .container
-        .saas_section_title.mb_70
-          h2 O que FindCEP oferece ao seu negócio?
-          p
-            | O FindCEP é a mais ágil e completa solução de localizacação de codigo postal e endereços no 
-            br
-            | BRASIL.
-          h3 Base integrada com os Correios
-          p  
-            | diretamente integrada com os Correios que oferece Busca de CEPs (Código Enderecamento Postal) e Endereços para o seu negócio online.
         .row.saas_features_info
           .col-md-4.col-sm-6.col-xs-12
             .saas_features_item
               .round_icon
                 img(src='images/new/icon/d-f1.png', alt='')
-              h3 Todos os endereços
+              h3 Classificação de Localidades
               p
-                | Com o FindCEP o seu cliente conseguirá completar o cadastro, ou criar a conta em segundos,
-                br
-                | garantindo agilidade na finalização da compra.
+                | Só o FindCEP inclui a estrutura do cep contendo localidades não codificadas (CEP Unico) e localidades codificadas como caixa postal comunitaria.
           .col-md-4.col-sm-6.col-xs-12
             .saas_features_item
               .round_icon
                 img(src='images/new/icon/d-f2.png', alt='')
-              h3 Base atualizada
+              h3 Base de CEP atualizada
               p
-                | Nossa base de CEPs é atualizada mensalmente. Com mais de 1 milhão de CEPs para consulta.
+                | Nossa base de CEPs é atualizada mensalmente e integrada automaticamente com os correios.
           .col-md-4.col-sm-6.col-xs-12
             .saas_features_item
               .round_icon
                 img(src='images/new/icon/d-f3.png', alt='')
-              h3 Unique Design
+              h3 Códigos dos Municípios - IBGE
               p
-                | Officiis per torquent placeat tempora blandit, aliquid, iure, quod dignissim reprehenderit turpis placeat unde.
+                | Nossa base é sincronizada com a última versão da base disponibilizada pelo 
+                a(taget="_blank" href="https://www.ibge.gov.br/explica/codigos-dos-municipios.php") IBGE 
+                | , Incluindo corretamente os códigos dos distritos e sub-distritos.
           .col-md-4.col-sm-6.col-xs-12
             .saas_features_item
               .round_icon
                 img(src='images/new/icon/d-f4.png', alt='')
-              h3 Unlimited Dashboards
+              h3 Taxa de Atualização
               p
-                | Officiis per torquent placeat tempora blandit, aliquid, iure, quod dignissim reprehenderit turpis placeat unde.
+                | Em media são disponibilizados pelos correios atualizacoes com cerca de 10 mil endereços/cep por mês.
           .col-md-4.col-sm-6.col-xs-12
             .saas_features_item
               .round_icon
                 img(src='images/new/icon/d-f5.png', alt='')
-              h3 Register to get start
+              h3 Arquitetura
               p
-                | Officiis per torquent placeat tempora blandit, aliquid, iure, quod dignissim reprehenderit turpis placeat unde.
+                | O FindCEP fica hospedado na Cloud AWS, utilizando as melhores praticas do mercado. O produto foi desenvolvido para performar durante as Black-friday's
           .col-md-4.col-sm-6.col-xs-12
             .saas_features_item
               .round_icon
                 img(src='images/new/icon/d-f6.png', alt='')
-              h3 Easy Customizable
+              h3 Sempre Online
               p
-                | Officiis per torquent placeat tempora blandit, aliquid, iure, quod dignissim reprehenderit turpis placeat unde.
+                | Desde 2016, o SLA Anual do FindCEP tem sido maior que 
+                a(target="_blank" href="https://uptime.is/99.99") 99.99%.
+                | Não dependa mais de apis grátis que não garantem a disponibilidade do serviço. Se o CEP parar seu negocio tambem para.
     section#dashboard.saas_about_area
       a.scroll_btn(href='#')
         i
@@ -231,17 +224,17 @@ html(lang='pt-br')
           .row
             .col-md-5
               .saas_about_content.text-left
-                h2.saas_h2.mt_0 Easy and secure access
+                h2.saas_h2.mt_0 Agilidade
                 p.n_title_p
                   | Proporcione ao seu cliente, agilidade e facilidade, na criação de cadastros e contas no seu site, mitigue carrinhos abandonados e aumente a conversão.
-                a.saas_btn_two.n_them_btn(href='') Learn More
+                a.saas_btn_two.n_them_btn(href='') Saiba Mais
     section.saas_gallery_area
       .saas_section_title.mb_70
         h2 Nossos Clientes
         p
-          | Tristique voluptate proident ipsam, officia mus? Nam tempus, conubia 
+          | Até o momento mais de 50 milhões consultas
           br
-          | nascetur vero hac animi? Sapien cillum class quia.
+          | foram realizadas pelos nossos clientes no FindCEP.
       .saas_screen_gallery.owl-carousel
         .item
           img(src='images/new/saas/screen1.jpg', alt='')
